--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
       <p><b>Masa total:</b> <span id="mass_out"></span></p>
       <p><b>Volumen:</b> <span id="vol_out"></span></p>
       <p><b>Densidad promedio:</b> <span id="avg_out"></span></p>
-
+      <p> Ingresa con el slayer cada uno de tus datos solicitados una vez hecho esto actualiza todo
+      al costado o a bajo si usas dispositivo mobil</p>
     </div>
 
     <!-- PANEL DERECHO -->
@@ -227,3 +228,4 @@ updateAll();
 </script>
 </body>
 </html>
+
