--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <p><b>Volumen:</b> <span id="vol_out"></span></p>
       <p><b>Densidad promedio:</b> <span id="avg_out"></span></p>
       <p> Ingresa con el slayer cada uno de tus datos solicitados una vez hecho esto actualiza todo
-      al costado o a bajo si usas dispositivo mobil</p>
+      al costado o a bajo si usas dispositivo mobil podras observar los graficos en 2Dl</p>
     </div>
 
     <!-- PANEL DERECHO -->
@@ -228,4 +228,5 @@ updateAll();
 </script>
 </body>
 </html>
+
 
